# ballroomdj4

./: .gitignore  .hgignore  .hgtags  ChangeLog.txt  LICENSE.txt  README.txt  VERSION.txt  bdj4.doxygen  macos-github.sh
src/: CMakeLists.txt  Makefile  audiotag.c  audiotag.h  autosel.c  autosel.h  bdj4.c  bdj4.h  bdj4altinst.c  bdj4cli.c  bdj4configui.c  bdj4converter.c  bdj4dbtag.c  bdj4dbupdate.c  bdj4helperui.c  bdj4info.c  bdj4init.c  bdj4init.h  bdj4installer.c  bdj4instalt.c  bdj4intl.h  bdj4locale.c  bdj4locatebdj3.c  bdj4main.c  bdj4main.h  bdj4manageui.c  bdj4marquee.c  bdj4mobmq.c  bdj4player.c  bdj4playerui.c  bdj4playerui.h  bdj4rc.c  bdj4register.c  bdj4se.c  bdj4starterui.c  bdj4tags.c  bdj4updater.c  bdjlog.c  bdjlog.h  bdjmsg.c  (+192 more)
src/CmakeModules/: FindLIBVLC.cmake
src/bpmcounter/: CMakeLists.txt  bdj4bpmcounter.c
src/check/: CMakeLists.txt  check_all.c  check_autosel.c  check_bdj.h  check_bdjmsg.c  check_bdjstring.c  check_bdjvars.c  check_bdjvarsdf.c  check_bdjvarsdfload.c  check_colorutils.c  check_dance.c  check_dancesel.c  check_datafile.c  check_dirlist.c  check_dirop.c  check_dispsel.c  check_dnctypes.c  check_filedata.c  check_filemanip.c  check_fileop.c  check_genre.c  check_ilist.c  check_istring.c  check_level.c  check_libbasic.c  check_libbdj4.c  check_libcommon.c  check_lock.c  check_musicdb.c  check_musicq.c  check_nlist.c  check_orgopt.c  check_orgutil.c  check_osprocess.c  check_osrandom.c  check_ossignal.c  check_pathbld.c  check_pathutil.c  check_procutil.c  check_progstate.c  (+20 more)
src/configui/: CMakeLists.txt  bdj4configui.c  confcommon.c  confdance.c  confdebug.c  confdispset.c  conffilter.c  confgeneral.c  confgenre.c  confgui.c  confitunes.c  conflevel.c  confmarquee.c  confmobmq.c  conforg.c  confplayer.c  confrating.c  confrc.c  confstatus.c  conftable.c  conftableadd.c  conftabledance.c  conftableset.c  confui.c
src/include/: audiotag.h  autosel.h  bdj4.h  bdj4init.h  bdj4intl.h  bdj4playerui.h  bdj4reg.h  bdj4ui.h  bdjmsg.h  bdjopt.h  bdjregex.h  bdjstring.h  bdjvars.h  bdjvarsdf.h  bdjvarsdfload.h  configui.h  conn.h  dance.h  dancesel.h  datafile.h  dirlist.h  dirop.h  dispsel.h  dnctypes.h  filedata.h  filemanip.h  fileop.h  fileutil.h  genre.h  ilist.h  istring.h  level.h  list.h  localeutil.h  locatebdj3.h  lock.h  log.h  m3u.h  manageui.h  misc.h  (+65 more)
src/installer/: CMakeLists.txt  bdj4altsetup.c  bdj4installer.c  bdj4se.c  bdj4updater.c
src/libbasic/: CMakeLists.txt  bdjopt.c  datafile.c  dirlist.c  istring.c  list.c  localeutil.c  lock.c  nlist.c  rafile.c
src/libbdj4/: CMakeLists.txt  audiotag.c  autosel.c  bdj4init.c  bdjvarsdfload.c  dance.c  dancesel.c  dispsel.c  dnctypes.c  genre.c  itunes.c  itunesb.c  level.c  m3u.c  msgparse.c  musicdb.c  musicq.c  orgopt.c  orgutil.c  playlist.c  rating.c  samesong.c  sequence.c  song.c  songdb.c  songfav.c  songfilter.c  songlist.c  songsel.c  songutil.c  sortopt.c  status.c  tagdef.c  templateutil.c  validate.c  volreg.c  webclient.c
src/libbdj4gtk/: CMakeLists.txt  uigtkbox.c  uigtkdialog.c  uigtkdropdown.c  uigtklabel.c  uigtkpbar.c  uigtkspinbox.c  uigtktextbox.c  uigtktreeview.c  uigtkutils.c  uigtkwindow.c  uimusicqgtk.c  uisongselgtk.c
src/libbdj4ui/: CMakeLists.txt  osuilinuxutils.c  osuimacutils.m  osuiwinutils.c  uidance.c  uiduallist.c  uifavorite.c  uigenre.c  uilevel.c  uimusicq.c  uimusicqcommon.c  uimusicqgtk.c  uinbutil.c  uiplayer.c  uirating.c  uiselectfile.c  uisong.c  uisongedit.c  uisongeditgtk.c  uisongfilter.c  uisongsel.c  uisongselcommon.c  uisongselfilter.c  uisongselgtk.c  uistatus.c  uiutils.c
src/libbdj4uigtk/: CMakeLists.txt  uimusicq.c  uimusicqgtk.c  uiplayer.c  uisongeditgtk.c  uisongsel.c  uisongselfilter.c  uisongselgtk.c
src/libbdjregex/: CMakeLists.txt  bdjregex.c
src/libcommon/: CMakeLists.txt  bdj4reg.c  bdjmsg.c  bdjopt.c  bdjstring.c  bdjvars.c  colorutils.c  conn.c  datafile.c  dirlist.c  dirop.c  filedata.c  filemanip.c  fileop.c  fileutil.c  ilist.c  istring.c  list.c  localeutil.c  lock.c  log.c  misc.c  nlist.c  osdir.c  oslinuxutils.c  oslocale.c  osmacutils.m  osnetutils.c  osprocess.c  osrandom.c  ossignal.c  osutils.c  oswinprocess.c  oswinutils.c  pathbld.c  pathutil.c  procutil.c  progstate.c  queue.c  rafile.c  (+6 more)
src/libdylib/: CMakeLists.txt  dylib.c
src/liblocbdj3/: CMakeLists.txt
src/libpli/: CMakeLists.txt  pli.c  plinull.c  plivlc.c  vlci.c
src/libuigtk3/: CMakeLists.txt  uigeneral.c  uigtkbox.c  uigtkbutton.c  uigtkchgind.c  uigtkdialog.c  uigtkdropdown.c  uigtkentry.c  uigtkimage.c  uigtklabel.c  uigtklink.c  uigtkmenu.c  uigtknotebook.c  uigtkpbar.c  uigtkscale.c  uigtksep.c  uigtksizegrp.c  uigtkspinbox.c  uigtkswitch.c  uigtktextbox.c  uigtktoggle.c  uigtktreeview.c  uigtkutils.c  uigtkwidget.c  uigtkwindow.c
src/libvol/: CMakeLists.txt  volmac.m  volnull.c  volpa.c  voltest.c  volume.c  volwin.cpp
src/libwebsrv/: CMakeLists.txt  websrv.c
src/locale/: de_DE.po  en.po  fi_FI.po  no_NO.po  zh_CN.po  zh_TW.po
src/manageui/: CMakeLists.txt  bdj4bpmcounter.c  bdj4dbtag.c  bdj4dbupdate.c  bdj4manageui.c  managedb.c  managemisc.c  managepl.c  managepltree.c  manageseq.c  managestats.c
src/mkc_config/: bdj-env-gtk.mkc  bdj-env-shared.mkc  bdj-env-test.mkc  bdj-env.mkc  bdj.mkc  bdjalsa.mkc  bdjcommon.mkc  bdjgtk.mkc  bdjpa.mkc  bdjplayer.mkc  bdjssl.mkc  bdjtest.mkc  bdjvlc.mkc  bdjvolwin.mkc
src/player/: CMakeLists.txt  bdj4main.c  bdj4marquee.c  bdj4mobmq.c  bdj4player.c  bdj4rc.c
src/playerui/: CMakeLists.txt  bdj4playerui.c
src/po/: bdj4.pot  complete.txt  de_DE.po  en.po  en_GB.po  en_US.po  extract-helptext.awk  extract.sh  install.sh  lang-lookup.awk  lang-lookup.sh  mken.sh  mken_gb.sh  mken_us.awk  mken_us.sh  nl.po  nl_BE.po  set-helptext.awk  tr_TR.po  tr_TR.po.backup  unload.sh
src/starter/: CMakeLists.txt  bdj4.c  bdj4helperui.c  bdj4starterui.c
src/utility/: CMakeLists.txt  bdj4info.c  bdj4msetup.c  bdj4tags.c  tmusicsetup.c
src/utils/: FindLIBVLC.cmake  asan.env  bdj4config.cmake  bdj4macros.cmake  chktests.sh  depcheck.sh  instmobtoweb.sh  makehtmllist.sh  mktestdb.sh  sortinc.sh  (+3 more)
(+227 files in other folders)
